change svg, to handle clippath bug

--- a/src/app/shared/components/dialogs/dialog/dialog-header/dialog-header.component.scss
+++ b/src/app/shared/components/dialogs/dialog/dialog-header/dialog-header.component.scss
@@ -56,5 +56,5 @@ h3 {
 }
 
 .hide-help-button {
-  display: none;
+  visibility: hidden;
 }
